[package]
name = "poke-dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
ron = { version = "0.12.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
string-interner = "0.20.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"